fix: success return code in email verfiicaiton
